--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "@capacitor/status-bar": "4.0.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "@vueuse/core": "^9.0.2",
+    "@vueuse/integrations": "^9.0.2",
     "core-js": "^3.6.5",
+    "firebase": "^9.9.1",
+    "fuse.js": "^6.6.2",
+    "pinia": "^2.0.17",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
   },
